--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,25 +8,27 @@ services:
     container_name: fastapi_backend
     env_file:
       - .env
+    environment:
+      - DB_HOST=db
     ports:
       - "8000:8000"
     volumes:
       - ./backend:/app
     networks:
-      - app-network
+      - chat-network
 
   frontend:
     build:
       context: ./frontend_chat
       dockerfile: Dockerfile
-    container_name: react_frontend
+    container_name: nextjs_frontend
     ports:
-      - "3000:80"
+      - "80:3000" 
     depends_on:
       - backend
     networks:
-      - app-network
+      - chat-network
 
 networks:
-  app-network:
-    driver: bridge
+  chat-network:
+    external: true
