--- a/vector_db/docker-compose.yaml
+++ b/vector_db/docker-compose.yaml
@@ -12,6 +12,12 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./init-db:/docker-entrypoint-initdb.d
+    networks:
+      - chat-network
+
+networks:
+  chat-network:
+    external: true
 
 volumes:
   pgdata:
