--- a/vector_db/docker-compose.yaml
+++ b/vector_db/docker-compose.yaml
@@ -4,9 +4,9 @@ services:
     container_name: postgres_vector
     restart: always
     environment:
-      POSTGRES_USER: usuario
-      POSTGRES_PASSWORD: senha
-      POSTGRES_DB: vector_db
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     ports:
       - "5432:5432"
     volumes:
