alterações para evitar os problemas de conexão (dar tempo ao db de subir)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
       - ./backend:/app
     networks:
       - chat-network
+    restart: always
 
   frontend:
     build:
@@ -28,6 +29,7 @@ services:
       - backend
     networks:
       - chat-network
+    restart: always
 
 networks:
   chat-network:
